Nicks in Outreach

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -155,21 +155,21 @@ Progress continues to be made on outreach, with a big focus on education and mak
 
 Building on education, website work is coming close to production, with a new introductory video and new subpages on Secure, Adaptable, Self-Funding, History, and a general repository on education. This work will help support community growth by making it easier to understand Decred.
 
-@anshawblack released Decred in Depth podcast episodes featuring Luke Powell and Joel Monegro. @Dustorf and @jy-p recorded Decred Assembly episodes, including Decred Distributed with Akin Sawyerr featuring Decred in Africa, Deep Dive with Marco Peereboom on the Treasury proposal, and Decred Distributed with @richardred. The latter two episodes will be released shortly.
+@anshawblack released Decred in Depth podcast episodes featuring @lukebp and Joel Monegro. @Dustorf and @jy-p recorded Decred Assembly episodes, including Decred Distributed with @akinsawyerr featuring Decred in Africa, Deep Dive with @moo31337 on the Treasury proposal, and Decred Distributed with @richardred. The latter two episodes will be released shortly.
 
-Various events are being planned across the world, including Germany, Japan, China and Canada. The project has funding for a major event in Europe and Asia in 2019, and has not yet made a specific commitment. Please share in #event\_planning if you have specific ideas. We rely on the community across the world to help identify and execute opportunities.
+Various events are being planned across the world, including Germany, Japan, China and Toronto. The project has funding for a major event in Europe and Asia in 2019, and has not yet made a specific commitment. Please share in #event\_planning if you have specific ideas. We rely on the community across the world to help identify and execute opportunities.
 
-Decred has made significant progress on the issue of governance. The staking byline in CoinDesk is a precursor to the Decred governance manifesto, and Akin Sawyerr [spoke](https://github.com/decredcommunity/events/blob/master/reports/20190701-wharton-governance-workshop-san-francisco-usa.md) at the Wharton Governance conference alongside leading speakers in the field. There was much discussion of Decred and it was widely respected as a pioneer and leader in governance. Decred has been invited to speak at the next such conference in Japan.
+Decred has made significant progress on the issue of governance. The staking byline in CoinDesk is a precursor to the Decred governance manifesto, and @akinsawyerr [spoke](https://github.com/decredcommunity/events/blob/master/reports/20190701-wharton-governance-workshop-san-francisco-usa.md) at the Wharton Governance conference alongside leading speakers in the field. There was much discussion of Decred and it was widely respected as a pioneer and leader in governance. Decred has been invited to speak at the next such conference in Japan.
 
 Ditto's June achievements:
 
-* Facilitated an introductory interview on governance and staking between Jake and CoinDesk 
-* Facilitated an interview with Legacy Research analyst Greg Wilson and Marco, who gave an overview and update of Decred, geared towards an investor audience. 
-* Secured and staffed [Off the Chain](https://podcasts.apple.com/us/podcast/jake-yocom-piatt-project-lead-for-decred-crypto-ego/id1434060078?i=1000441486954) podcast with Anthony Pompliano, founder of Morgan Creek Digital, and Jake.
-* Secured and staffed [Chain Reaction](https://www.youtube.com/watch?v=kO_11gehyls) podcast with Tom Shaughnessy of Delphi Digital, and Jake. 
+* Facilitated an introductory interview on governance and staking between @jy-p and CoinDesk 
+* Facilitated an interview with Legacy Research analyst Greg Wilson and @moo31337, who gave an overview and update of Decred, geared towards an investor audience. 
+* Secured and staffed [Off the Chain](https://podcasts.apple.com/us/podcast/jake-yocom-piatt-project-lead-for-decred-crypto-ego/id1434060078?i=1000441486954) podcast with Anthony Pompliano, founder of Morgan Creek Digital, and @jy-p.
+* Secured and staffed [Chain Reaction](https://www.youtube.com/watch?v=kO_11gehyls) podcast with Tom Shaughnessy of Delphi Digital, and @jy-p. 
 * Got Decred quoted on Facebook Libra in [CNBC](https://www.cnbc.com/2019/06/18/facebooks-libra-will-give-billions-access-to-cryptocurrency.html), [Mashable](https://mashable.com/article/facebook-libra-experts/), [CoinTelegraph](https://cointelegraph.com/news/what-is-libra-breaking-down-facebooks-new-digital-currency) and [Forbes](https://www.forbes.com/sites/kenrapoza/2019/06/20/facebooks-libra-coin-is-both-vampire-project-and-regulatory-nightmare/) ([twice](https://www.forbes.com/sites/rachelwolfson/2019/06/19/facebooks-cryptocurrency-libra-validates-blockchain-but-industry-experts-voice-concerns/)!). Side note: CNBC and Mashable are mainstream media reaching people who know little about crypto. By getting Decred in front of them, we're significantly expanding its reach.
-* Got Jake [quoted](https://www.coindesk.com/how-blockchain-voting-is-supposed-to-work-but-in-practice-rarely-does) on governance in CoinDesk.
-* Got Richard [quoted](https://cointelegraph.com/news/internet-authority-history-of-centralized-companies-being-hostile-toward-crypto) in a CoinTelegraph article about CCN's "shutdown".
+* Got @jy-p [quoted](https://www.coindesk.com/how-blockchain-voting-is-supposed-to-work-but-in-practice-rarely-does) on governance in CoinDesk.
+* Got @richardred [quoted](https://cointelegraph.com/news/internet-authority-history-of-centralized-companies-being-hostile-toward-crypto) in a CoinTelegraph article about CCN's "shutdown".
 * Attended San Francisco Bitcoin meetup, where the organizers expressed interest in organizing a governance panel with Decred as a speaker. 
 * Created a social media [guide](https://github.com/decredcommunity/pr/blob/release/engagement-guide-delist.md) on how to react (or not) to geofencing or delisting. 
 * Rallied the community to engage and share media coverage on social media.
