Fix Rel Ext and credits

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -317,7 +317,7 @@ There has been some friction between the developer groups working on Tezos softw
 
 An anonymous user claiming to be a current or former employee of Chainalysis participated in an AMA on /r/Bitcoin, subsequently deleted but archived [here](https://www.reddit.com/r/Bitcoin/comments/c4so58/i_am_a_current_or_former_employee_of_chainalysis/) (thanks [u/Fiach_Dubh](https://www.reddit.com/r/Bitcoin/comments/c4so58/i_am_a_current_or_former_employee_of_chainalysis/eryukx6)). The answers suggested that Bitcoin privacy techniques like CoinJoin and Wasabi wallet, and all of the coins with privacy features, were hated by Chainalysis, and did not see a bright future for blockchain forensic analysis.
 
-{block withholding attack claim https://bitkan.com/en/news/topic/217913 (archived https://archive.today/JpDje ) - not possible in Decred. Clarify: is the claim true?}
+{block withholding attack claim https://bitkan.com/en/news/topic/217913 (https://archive.today/JpDje); clarify: 1) is the claim true? 2) how it applies to Decred?}
 
 FATF has [finalized](https://www.coindesk.com/fatf-crypto-travel-rule) its recommendation for handling crypto. Per the new standards, businesses like exchanges and wallet providers must obtain and store information to identify both sender and recipient, and exchange this information with each other like banks do (the 'travel route'). Member countries have 12 months to adopt the guidelines which will be reviewed in June 2020. The recommendations are not binding but non-complying countries risk being put on a blacklist.
 
@@ -353,6 +353,6 @@ Your feedback and contributions are welcome on Reddit, [GitHub](https://github.c
 
 Credits (alphabetical order):
 
-* writing and editing: bee, degeri, Dustorf, richardred, s\_ben
-* reviews and feedback: jholdstock, jz, lukebp, matheusd
+* writing and editing: bee, degeri, Dustorf, lukebp, richardred, s\_ben
+* reviews and feedback: jholdstock, jz, matheusd, raedah
 * title image: saender
