--- a/journal/201906.md
+++ b/journal/201906.md
@@ -16,19 +16,19 @@
 
 [dcrd](https://github.com/decred/dcrd): Code maintenance and more test coverage.
 
-Several modules upgraded to improve organization, readability and prevent subtle bugs. Version 2 of the `dcrutil` module [introduced](https://github.com/decred/dcrd/pull/1767) to reduce coupling and prevent subtle bugs in handling addresses. A large codebase upgrade to introduce v2 of `chaincfg` module [completed](https://github.com/decred/dcrd/pull/1698). Benefits from this include: reducing the surface of the critical consensus code by defining block 1 payouts as scripts instead of addresses, removing undesired side effects upon importing the package and improving organization of network parameters. Version 2 of the `txscript` module also [introduced](https://github.com/decred/dcrd/pull/1774) to use new versions of `chaincfg` and `dcrutil` modules. Opportunity of the version bump was taken to also address several issues in the v1.
+Several modules upgraded to improve organization, readability and prevent subtle bugs. Version 2 of the `dcrutil` module [introduced](https://github.com/decred/dcrd/pull/1767) to reduce coupling and prevent subtle bugs in handling addresses. A large codebase upgrade to introduce v2 of `chaincfg` module [completed](https://github.com/decred/dcrd/pull/1698). Benefits from this include: reducing the surface of the critical consensus code by defining block 1 payouts as scripts instead of addresses, removing undesired side effects upon importing the package and improving organization of network parameters. Version 2 of the `txscript` module also [introduced](https://github.com/decred/dcrd/pull/1774) to use new versions of `chaincfg` and `dcrutil` modules. The Opportunity of the version bump was taken to also address several issues in the v1.
 
 Overhaul of the background template generator covered in [May issue](201905.md) was [merged](https://github.com/decred/dcrd/pull/1748).
 
-These large code upgrades are done very carefully. First a new module version is introduced, then depending modules are gradually updated to use the new version. At all times, everything must build and pass all tests, and each commit must be maximally reviewable.
+These large code upgrades are done very carefully. First, a new module version is introduced, then depending modules are gradually updated to use the new version. At all times, everything must build and pass all tests, and each commit must be maximally reviewable.
 
-Among other smaller improvements, support was [added](https://github.com/decred/dcrd/pull/1757) for generation of Ed25519 TLS certificates on Go 1.13. 
+Among other smaller improvements, support was [added](https://github.com/decred/dcrd/pull/1757) for the generation of Ed25519 TLS certificates on Go 1.13. 
 
 [dcrwallet](https://github.com/decred/dcrwallet): Bug fixes and incremental improvements.
 
 Default [TLS curve](https://github.com/decred/dcrwallet/pull/1468) changed to a more secure P-256. Support added and enabled for [Ed25519](https://github.com/decred/dcrwallet/pull/1477) TLS certificates by default on Go 1.13.
 
-Ticket handling improved by addition of [`ticketbuyer.limit`](https://github.com/decred/dcrwallet/pull/1476) flag to limit max tickets bought per block and corrected `lockedbytickets` [balance calculation](https://github.com/decred/dcrwallet/pull/1330) to address several issues for solo, VSP and split ticket voters. An [RPC fix](https://github.com/decred/dcrwallet/pull/1478) will allow VSPs to show [immature tickets](https://github.com/decred/dcrstakepool/pull/404) separately. Several new [wallet address APIs](https://github.com/decred/dcrwallet/pull/1474) added to simplify development of address-related features.
+Ticket handling improved by the addition of [`ticketbuyer.limit`](https://github.com/decred/dcrwallet/pull/1476) flag to limit max tickets bought per block and corrected `lockedbytickets` [balance calculation](https://github.com/decred/dcrwallet/pull/1330) to address several issues for solo, VSP and split ticket voters. An [RPC fix](https://github.com/decred/dcrwallet/pull/1478) will allow VSPs to show [immature tickets](https://github.com/decred/dcrstakepool/pull/404) separately. Several new [wallet address APIs](https://github.com/decred/dcrwallet/pull/1474) added to simplify the development of address-related features.
 
 Work is [in progress](https://github.com/decred/dcrwallet/pull/1471) to allow arbitrary xpub account imports. This feature will improve privacy by allowing the automatic ticket buyer to derive unique voting addresses, avoiding address reuse.
 
@@ -56,7 +56,7 @@ In response to a question about BTC-DCR swaps on LN, @matheusd [clarified](https
 
 [dcrios](https://github.com/raedahgroup/dcrios): Release of the iOS wallet nears, with [Release Candidate 2](https://www.reddit.com/r/decred/comments/c7ir8d/decred_wallet_for_ios_release_client_2/) of the iOS Wallet awaiting approval by the Apple App Store. Localization infrastructure and [Russian](https://github.com/raedahgroup/dcrios/pull/470) translation has been added, bugs reported in [Release Candidate 1](https://www.reddit.com/r/decred/comments/bxje6l/decred_wallet_for_ios_release_client_1/) have been fixed and minor UI tweaks have been implemented.
 
-[dcrdata](https://github.com/decred/dcrdata): A major release, v5.0 is now live. In addition to architecture, security, and performance improvements, v5.0 introduces a number of new new charts and visualizations for exploring Decred data.
+[dcrdata](https://github.com/decred/dcrdata): A major release, v5.0 is now live. In addition to architecture, security, and performance improvements, v5.0 introduces a number of new charts and visualizations for exploring Decred data.
 
 A new [market](https://explorer.dcrdata.org/market?chart=depth&xc=aggregated&bin=1h&stack=1) page shows data from several major exchanges, including aggregated DCR price feeds, order book depth, candlestick charts, and more. The [proposals](https://explorer.dcrdata.org/proposals) page is out of beta, and showing stats and voting charts (real-time and historical) for all Politeia proposals.
 
@@ -66,7 +66,7 @@ Charts should also load faster with performance improvements, including [improve
 
 For a full list of changes, see the [Release Notes](https://github.com/decred/dcrdata/releases/tag/release-v5.0.0).
 
-[docs](https://github.com/decred/dcrdocs): Instances of "DAE" (Distributed Autonomous Entity) were [replaced](https://github.com/decred/dcrdocs/pull/958) with "DAO" (Distributed Autonomous Organization). A new page adds details how the [algorithm](https://github.com/decred/dcrdocs/pull/963) used to pseudorandomly select tickets for voting works. 
+[docs](https://github.com/decred/dcrdocs): Instances of "DAE" (Distributed Autonomous Entity) were [replaced](https://github.com/decred/dcrdocs/pull/958) with "DAO" (Distributed Autonomous Organization). A new page adds details on how the [algorithm](https://github.com/decred/dcrdocs/pull/963) used to pseudorandomly select tickets for voting works. 
 
 Other:
 
@@ -103,7 +103,7 @@ There were 2 new proposals published:
 
 * [Supplemental Proposal For Decred Tutorials By Denni Lovejoy](https://proposals.decred.org/proposals/d8d7ff7ad138ed322422aaa4d2a3e1c61f296ae56a2c2316cc5ecd10cf8dd8bd). This proposal asks for the original budget of $750 for tutorial videos to be increased to $7,500. @Denni Lovejoy has asked for the proposal to be abandoned following comments opposing it. There is some ongoing discussion about how to handle these scenarios where work on a proposal goes significantly over budget.
 
-* [Decred Media Campaign Proposal - Crypto Economy - 2019/2020](https://proposals.decred.org/proposals/1a367dcb91b55c60ad5fd038b219201154fcab965edd7a4639f157e409b1f4bf). This proposal requested $33,600 to promote Decred in a number of ways, including banner advertisements , press releases, a Decred giveaway and a newsletter. Comments remarked that some of these are already being well covered and others are not desirable. The proposal was then abandoned by its owner.
+* [Decred Media Campaign Proposal - Crypto Economy - 2019/2020](https://proposals.decred.org/proposals/1a367dcb91b55c60ad5fd038b219201154fcab965edd7a4639f157e409b1f4bf). This proposal requested $33,600 to promote Decred in a number of ways, including banner advertisements, press releases, a Decred giveaway and a newsletter. Comments remarked that some of these are already being well covered and others are not desirable. The proposal was then abandoned by its owner.
 
 This [graph](https://twitter.com/RichardRed0x/status/1139860218010058753) shows Politeia voter participation for the 28 proposals that have finished voting so far.
 
@@ -129,7 +129,7 @@ dcr.farm received a new [Lightning Network](https://charts.dcr.farm/d/DHPdAO4Wz/
 
 On Jun 27 DCR supply [crossed](https://twitter.com/raedahgroup/status/1144655370234880000) 10,000,000 DCR. 10 million DCR distributed means the genesis [premine](https://docs.decred.org/advanced/premine/) accounts for 17% of currently circulating DCR, PoW miners got 50%, PoS voters got 25% and the Treasury got 8%.
 
-There were support requests from ticket holders saying that their tickets have been [missed](https://www.reddit.com/r/decred/comments/c862ee/assistance_needed_missed_tickets/) by certain VSPs. Upon investigation it was discovered that [Grassfed](https://dcr.grassfed.network/) and [d1pool](https://d1pool.com) have been forked off from the network and have missed on these votes. Grassfed has responded and promised to keep up with future updates. We have been unable to reach d1pool and discussion is currently underway to remove them from the [list of VSPs](https://decred.org/vsp/) at decred.org.
+There were support requests from ticket holders saying that their tickets have been [missed](https://www.reddit.com/r/decred/comments/c862ee/assistance_needed_missed_tickets/) by certain VSPs. Upon investigation, it was discovered that [Grassfed](https://dcr.grassfed.network/) and [d1pool](https://d1pool.com) have been forked off from the network and have missed on these votes. Grassfed has responded and promised to keep up with future updates. We have been unable to reach d1pool and discussion is currently underway to remove them from the [list of VSPs](https://decred.org/vsp/) at decred.org.
 
 There has also been an [issue](https://github.com/decred/dcrstakepool/issues/413) and a [chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$156207152510654HMiFp:decred.org) on how these issues can be avoided in the future. Another discussed idea was a sustained effort to get more people set up their own [voting wallets](https://matrix.to/#/!dhHYPTtCtvPSUfTepT:decred.org/$156207972910815kERGq:decred.org).
 
@@ -195,7 +195,7 @@ Upcoming:
 
 * 10 Jul - [Chat with Decred Community Manager](https://twitter.com/BlockBeatsChina/status/1147570186519638017) - [StakingCon](https://www.huodongxing.com/event/2496757517700), Beijing, China.
 * 10 Jul - [Meetup](https://www.meetup.com/pt-BR/DecredBrasil/events/262243509/) - Sao Paulo, Brazil. 
-* 11 Jul - [Fireside Chat with Joshua Buirski](https://www.eventbrite.com/e/fireside-chat-with-joshua-buirski-decred-asia-pacific-lead-tickets-64832494737) - New York, USA. Cco-hosted by Staked and TokenTax.
+* 11 Jul - [Fireside Chat with Joshua Buirski](https://www.eventbrite.com/e/fireside-chat-with-joshua-buirski-decred-asia-pacific-lead-tickets-64832494737) - New York, USA. Co-hosted by Staked and TokenTax.
 * 24 Jul - Decred Meetup - Chicago, USA.
 
 The revamped event [reports repository](https://github.com/decredcommunity/events) is now at 14 decent reports. Please [submit](https://github.com/decredcommunity/events/wiki/Submit-Event-Report) your reports and share them on Reddit to expose how much event action is happening every month.
@@ -267,7 +267,7 @@ Selected Reddit posts:
 
 * A [post](https://www.reddit.com/r/decred/comments/c60aho/governance_would_matrixlike_channel_discussions/) asking if Matrix-like channel discussions posted on Reddit would increase adoption & education. 
 * [POLL: optimal Politeia pass threshold](https://www.reddit.com/r/decred/comments/bynidz/poll_optimal_politeia_pass_threshold/) - 57% said current level is OK, 7% said less than 60%, 26% were in favor of increasing the approval threshold.
-* [POLL: Rename Decrediton to Declaration](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/) - has a score on reddit of 0, which should probably be interpreted as lack of support.
+* [POLL: Rename Decrediton to Declaration](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/) - has a score on reddit of 0, which should probably be interpreted as a lack of support.
 * [Question](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/): Is a hybrid finance & governance tool called a 'wallet' or something altogether different?
 * [POLL: Rename DAE to DAO?](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/) - had a score of 15 and top comment says "I support changing it to DAO" with 8 points. See also this [comment](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/er1g4px) with notes on support from chat discussion.
 
