Add intro bullet

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -10,7 +10,7 @@
 
 * Smoother experience for contractors submitting invoices with bug fixes and UI improvements in the Contractor Management System (CMS) - an important milestone in rolling out the DCC and financial reporting.
 
-* {(social) media activity?}
+* This month saw some high profile podcast appearances and an increase in Decred mentions in articles and on social media. The #DecredChallenge is gaining some traction and encouraging people to look into Decred, understand it, and discuss whether it deserves a more prominent position in the cryptocurrency space.
 
 ## Development
 
