--- a/journal/201906.md
+++ b/journal/201906.md
@@ -16,7 +16,7 @@
 
 [dcrd](https://github.com/decred/dcrd): Code maintenance and more test coverage.
 
-Several modules upgraded to improve organization, readability and prevent subtle bugs. Version 2 of the `dcrutil` module [introduced](https://github.com/decred/dcrd/pull/1767) to reduce coupling and prevent subtle bugs in handling addresses. A large codebase upgrade to introduce v2 of `chaincfg` module [completed](https://github.com/decred/dcrd/pull/1698). Benefits from this include: reducing the surface of the critical consensus code by defining block 1 payouts as scripts instead of addresses, removing undesired side effects upon importing the package and improving organization of network parameters. Version 2 of the `txscript` module also [introduced](https://github.com/decred/dcrd/pull/1774) to use new versions of `chaincfg` and `dcrutil` modules. The Opportunity of the version bump was taken to also address several issues in the v1.
+Several modules upgraded to improve organization, readability and prevent subtle bugs. Version 2 of the `dcrutil` module [introduced](https://github.com/decred/dcrd/pull/1767) to reduce coupling and prevent subtle bugs in handling addresses. A large codebase upgrade to introduce v2 of `chaincfg` module [completed](https://github.com/decred/dcrd/pull/1698). Benefits from this include: reducing the surface of the critical consensus code by defining block 1 payouts as scripts instead of addresses, removing undesired side effects upon importing the package and improving organization of network parameters. Version 2 of the `txscript` module also [introduced](https://github.com/decred/dcrd/pull/1774) to use new versions of `chaincfg` and `dcrutil` modules. The opportunity of the version bump was taken to also address several issues in the v1.
 
 Overhaul of the background template generator covered in [May issue](201905.md) was [merged](https://github.com/decred/dcrd/pull/1748).
 
@@ -32,21 +32,21 @@ Ticket handling improved by the addition of [`ticketbuyer.limit`](https://github
 
 Work is [in progress](https://github.com/decred/dcrwallet/pull/1471) to allow arbitrary xpub account imports. This feature will improve privacy by allowing the automatic ticket buyer to derive unique voting addresses, avoiding address reuse.
 
-[Decrediton](https://github.com/decred/decrediton): Work on [LN wallet](https://github.com/decred/decrediton/pull/2107) integration continues. Internal improvements of handling [configuration](https://github.com/decred/decrediton/pull/2129), bug fixes and maintenance.
+[Decrediton](https://github.com/decred/decrediton): Work on [LN wallet](https://github.com/decred/decrediton/pull/2107) integration continues. Internal improvements to handling [configuration](https://github.com/decred/decrediton/pull/2129), bug fixes and maintenance.
 
 PoC underway to use a finite [state machine](https://github.com/decred/decrediton/pull/2130) to better manage complexity and improve correctness during startup.
 
-[Politeia](https://github.com/decred/politeia): A [plugin](https://github.com/decred/politeia/pull/929) structure has been added to the Politeia user database that makes building generic applications on top of Politeia's web server (politeiawww) easier. This will allow applications to more easily store application-specific user data (such as data from the Contractor Management System (CMS)), while still re-using the main user routes. A generic dcrdata websocket [implementation](https://github.com/decred/politeia/pull/933) has also been created, making it easier for applications building on politeiawww to monitor addresses balances and other blockchain data. 
+[Politeia](https://github.com/decred/politeia): A [plugin](https://github.com/decred/politeia/pull/929) structure has been added to the Politeia user database that makes building generic applications on top of Politeia's web server (politeiawww) easier. This will allow applications to more easily store application-specific user data (such as data from the Contractor Management System (CMS)), while still re-using the main user routes. A generic dcrdata websocket [implementation](https://github.com/decred/politeia/pull/933) has also been created, making it easier for applications building on politeiawww to monitor address balances and other blockchain data. 
 
 A number of incremental improvements and bug fixes related to the CMS, an application running politeiawww that reuses much of Politeia's frontend. Friction in the process of submitting invoices has been significantly reduced. The CMS has been in production processing contractor invoices since early May. 
 
 A full Politeia redesign to clean up the UI and make it consistent with Decred branding is [underway](https://twitter.com/lukebp_/status/1147528570581000193) and should launch within a month or so.
 
-An [issue](https://github.com/decred/politeia/issues/882) with duplicate votes was identified and fixed in May, but missed in the May issue of the Journal. 15 duplicate votes on the Decentralize Treasury Spending proposal made it into the Politeia journal repository, due to a bug with how incoming votes were checked against the memory cache, with concurrent votes being added before the cache was re-checked. The bug was identified as soon as the first duplicate vote was submitted and has now been [fixed](https://github.com/decred/politeia/pull/893). 
+An [issue](https://github.com/decred/politeia/issues/882) with duplicate votes was identified and fixed in May, but missed in the May issue of the Journal. 15 duplicate votes on the Decentralize Treasury Spending proposal made it into the Politeia journal repository, due to a bug with how incoming votes were checked against the memory cache, with concurrent votes being added before the cache was re-checked. The bug was identified as soon as the first duplicate vote was submitted and was quickly [fixed](https://github.com/decred/politeia/pull/893). 
 
 Progress was made towards running multiple Politeia instances [concurrently](https://github.com/decred/politeia/issues/665), making [email optional](https://github.com/decred/politeia/issues/860) and public [reporting](https://github.com/decred/politeia/pull/921) on expenses.
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): VSP software is getting more love in the recent months. Following the [redesign](https://github.com/decred/dcrstakepool/pull/339) in May, there was a lot of refactoring work to achieve proper [layer separation](https://github.com/decred/dcrstakepool/issues/227) between the components that will also have a small bonus on security and performance.
+[dcrstakepool](https://github.com/decred/dcrstakepool): VSP software is getting more love in the recent months. Following the [redesign](https://github.com/decred/dcrstakepool/pull/339) in May, there was a lot of refactoring work to achieve proper [layer separation](https://github.com/decred/dcrstakepool/issues/227) between the components that will also have a small bonus for security and performance.
 
 [dcrlnd](https://github.com/decred/dcrlnd): Work continues to port [upstream changes](https://github.com/decred/dcrlnd/pull/36) from the [lnd](https://github.com/lightningnetwork/lnd) repository. Approximately 190 (of 270) of the PRs merged into lnd since dcrlnd branched off have now been incorporated, including many bug fixes and two important features: safe backups for off-chain data and watchtower clients for breach protection and retribution.
 
@@ -105,7 +105,7 @@ There were 2 new proposals published:
 
 * [Decred Media Campaign Proposal - Crypto Economy - 2019/2020](https://proposals.decred.org/proposals/1a367dcb91b55c60ad5fd038b219201154fcab965edd7a4639f157e409b1f4bf). This proposal requested $33,600 to promote Decred in a number of ways, including banner advertisements, press releases, a Decred giveaway and a newsletter. Comments remarked that some of these are already being well covered and others are not desirable. The proposal was then abandoned by its owner.
 
-This [graph](https://twitter.com/RichardRed0x/status/1139860218010058753) shows Politeia voter participation for the 28 proposals that have finished voting so far.
+This [graph](https://twitter.com/RichardRed0x/status/1139860218010058753) shows Politeia voter participation for the 28 proposals that had finished voting thus far.
 
 For a more in-depth review of what's been happening on Politeia, check out the [two](https://medium.com/politeia-digest/issue-17-may-28-june-9-bc5bb77e4f6c) [issues](https://medium.com/politeia-digest/issue-18-june-10-june-29-97d140569ad0) of Politeia Digest published in June.
 
@@ -127,9 +127,9 @@ Nodes: throughout June there were around 200 listening nodes and 340-510 total n
 
 dcr.farm received a new [Lightning Network](https://charts.dcr.farm/d/DHPdAO4Wz/lightning-network?orgId=1) dashboard. As of Jul 8, it shows 15 nodes, 45 channels and a total capacity of 370 DCR.
 
-On Jun 27 DCR supply [crossed](https://twitter.com/raedahgroup/status/1144655370234880000) 10,000,000 DCR. 10 million DCR distributed means the genesis [premine](https://docs.decred.org/advanced/premine/) accounts for 17% of currently circulating DCR, PoW miners got 50%, PoS voters got 25% and the Treasury got 8%.
+On Jun 27 DCR supply [crossed](https://twitter.com/raedahgroup/status/1144655370234880000) 10,000,000 DCR. 10 million DCR distributed means the genesis [premine](https://docs.decred.org/advanced/premine/) accounts for 17% of currently circulating DCR, so far PoW miners got 50%, PoS voters got 25% and the Treasury got 8%.
 
-There were support requests from ticket holders saying that their tickets have been [missed](https://www.reddit.com/r/decred/comments/c862ee/assistance_needed_missed_tickets/) by certain VSPs. Upon investigation, it was discovered that [Grassfed](https://dcr.grassfed.network/) and [d1pool](https://d1pool.com) have been forked off from the network and have missed on these votes. Grassfed has responded and promised to keep up with future updates. We have been unable to reach d1pool and discussion is currently underway to remove them from the [list of VSPs](https://decred.org/vsp/) at decred.org.
+There were support requests from ticket holders saying that their tickets have been [missed](https://www.reddit.com/r/decred/comments/c862ee/assistance_needed_missed_tickets/) by certain VSPs. Upon investigation, it was discovered that [Grassfed](https://dcr.grassfed.network/) and [d1pool](https://d1pool.com) have been forked off from the network and have missed voting on their tickets. Grassfed has responded and promised to keep up with future updates. We have been unable to reach d1pool and discussion is currently underway to remove them from the [list of VSPs](https://decred.org/vsp/) at decred.org.
 
 There has also been an [issue](https://github.com/decred/dcrstakepool/issues/413) and a [chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$156207152510654HMiFp:decred.org) on how these issues can be avoided in the future. Another discussed idea was a sustained effort to get more people set up their own [voting wallets](https://matrix.to/#/!dhHYPTtCtvPSUfTepT:decred.org/$156207972910815kERGq:decred.org).
 
