--- a/journal/201907.md
+++ b/journal/201907.md
@@ -54,6 +54,8 @@ Congratulations to {n} contributors listed on [decred.org](https://decred.org/co
 
 {interviews about people}
 
+Decred Australia community has been building nicely. An [update](https://medium.com/@sahand.bagheri/decred-australia-building-a-community-brick-by-brick-89928041687e) shared last month recaps partnerships established, events organized, people attracted as well as next goals. This was covered in [June](201906.md)'s Media but turned out bigger than just an article.
+
 ## Governance
 
 In July the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using July's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. As these payments were for work completed in June, it is also informative to consider them in the context of the June average daily rate of ${n.nn} - in which case the USD received/spent figures are ${n}K/${n}K. As of {date}, Treasury balance is {n} DCR ({n.nn} million USD at ${n.nn}).
