--- a/journal/201907.md
+++ b/journal/201907.md
@@ -102,6 +102,8 @@ Exchange integrations:
 
 {wallets}
 
+https://twitter.com/Mixin_Network/status/1153272304790433793 Mixer ? 
+
 * Exodus+Trezor https://twitter.com/exodus_io/status/1148593861549334528
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
